# rock-paper-scissors-lizard-spock

./: README.md  main.py  pyproject.toml
src/: RPS_dict.py  RPS_game.py
src/test/: test_RPS_game.py
